# Soundex1

./: CMakeLists.txt
Soundex1/: CMakeLists.txt  SoundexTest.cpp
